Fixed project page responsive - below 400px, project cards now shrink in order to adapt to screen width. - project cards now align left when wrapping to a new line. - project page's refresh button now becomes an icon below 440px.

--- a/src/components/App-components/ProjectCard/ProjectCard.module.css
+++ b/src/components/App-components/ProjectCard/ProjectCard.module.css
@@ -1,14 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
-
-.projectCardPage {
-  margin: 40px 80px;
-}
-
 .projectCardContainer {
   position: relative;
-  width: 22.78rem;
+  width: 80svw;
+  max-width: 22.78rem;
   height: 14.04rem;
-  margin-bottom: 1.25rem;
   cursor: pointer;
   transition: all ease-in-out 0.2s;
 }
@@ -18,9 +12,9 @@
 }
 .projectCardContainerDisabled {
   position: relative;
-  width: 22.78rem;
+  width: 80svw;
+  max-width: 22.78rem;
   height: 14.04rem;
-  margin-bottom: 1.25rem;
   filter: grayscale(1);
   cursor: default;
 }
